--- a/index-docinfo-footer.html
+++ b/index-docinfo-footer.html
@@ -5,6 +5,7 @@
             side: 'right',
             openButton: false,
         },
+        autoPlayMedia: true,
     })
     Reveal.registerPlugin(RevealMenu)
 </script>
