--- a/slides/index-docinfo-footer.html
+++ b/slides/index-docinfo-footer.html
@@ -6,6 +6,10 @@
             openButton: false,
         },
         autoPlayMedia: true,
+        keyboard: {
+            38: 'prev',
+            40: 'next',
+        }
     })
     Reveal.registerPlugin(RevealMenu)
 </script>
