--- a/slides/home.html
+++ b/slides/home.html
@@ -19,9 +19,7 @@
     <h1>Openrewrite: Refactoring as code</h1>
     <div class="links">
         <div id="feedback">
-            <a href="https://openfeedback.io/devfestnantes2025/2025-10-16/openrewriterefactorascode" target="_blank">
-                <img src="./images/openfeedback-black-orange.svg" alt="Open feedback">
-            </a>
+            Les backups n'ont pas de feedback...
         </div>
         <div id="github">
             <a
